# NexDash

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  implementation-notes.html  implementation-notes.md  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  run_pipeline.py
artifacts/: aero_probe.py  diag_soc_color.mjs  doc_anchors.py  nexos-vs-nexdash-workflow.js  probe_energy.py  probe_eta_realism.mjs  probe_speedlimits.mjs  probe_station.mjs  repro_nexos_scenario.mjs  run_e2e.mjs  verify_charge_reconcile.mjs  verify_speedlimits.mjs  verify_station_ranking.mjs
dashboard/: app.js  index.html  server.py
docs/: ARCHITECTURE.md  DESIGN.md  LONG_TERM.md  REAL_WORLD_CALIBRATION.md
docs/superpowers/specs/: 2026-06-04-ui-ux-polish-design.md
examples/: conversation_1.md  conversation_2.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ErrorBoundary.jsx  (+6 more)
reports/: evaluation_report.md
scripts/: dev.mjs  feature_sensitivity.py
src/nexdash/: __init__.py  agent.py  calibration.py  cli.py  config.py  data_gen.py  drift.py  evaluate.py  failure_miner.py  features.py  fleet.py  geodata.py  mcp_oauth.py  mcp_server.py  model.py  model_info.py  optimizer.py  physics.py  promote.py  range.py  registry.py  route_planner.py  stress_test.py  tomtom.py  tools.py
tests/: test_agent.py  test_api.py  test_calibration.py  test_cli.py  test_data_gen.py  test_drift.py  test_evaluate.py  test_failure_miner.py  test_features.py  test_fleet.py  test_geodata.py  test_mcp_server.py  test_model.py  test_model_info.py  test_optimizer.py  test_physics.py  test_pipeline.py  test_promote.py  test_range.py  test_route_planner.py  test_stress_test.py  test_tomtom_enrichment.py  test_tomtom_speed_limits.py  test_tools.py
(+24 files in other folders)
