[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexdash"
version = "0.1.0"
description = "NexDash — EV Truck Range Intelligence for the Mercedes-Benz eActros 600."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NexDash" }]
keywords = ["ev", "truck", "range", "energy", "ai", "eActros"]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
    "matplotlib",
    "anthropic",
    "mcp",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
nexdash = "nexdash.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
